# awesome-rust

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  book.toml  index.html  package.json  print.html  rustBasicNotes.html  searcher-c2a407aa.js  searchindex-9037b192.js  searchindex.js  searchindex.json  toc-65a8efe2.js  toc-adf8bee6.js  toc.html  toc.js
.github/: renovate.json
.github/workflows/: ci.yml
crates/basis/: Cargo.toml
crates/basis/src/: git.rs  main.rs
crates/basis/src/git/: get_head_commit.rs
crates/basis/src/list/: stack.rs
crates/basis/src/time/: mod.rs  to_commit_time.rs  to_time.rs
crates/rustlings/: Cargo.toml  README.md
crates/rustlings/exercises/: quiz1.rs  quiz4.rs
crates/rustlings/exercises/clippy/: clippy1.rs  clippy2.rs
crates/rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
crates/rustlings/exercises/error_handling/: errors6.rs
crates/rustlings/exercises/standard_library_types/: arc1.rs  iterators5.rs
crates/rustlings/exercises/structs/: structs1.rs
crates/rustlings/src/: exercise.rs  main.rs  run.rs  verify.rs
crates/rustlings/tests/: integration_tests.rs
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/basis/: all.html  index.html
doc/hello_world/: all.html  fn.hello.html  index.html
doc/rustlings/: all.html  constant.VERSION.html  enum.Subcommands.html  enum.WatchStatus.html  fn.find_exercise.html  fn.main.html  fn.rustc_exists.html  fn.spawn_watch_shell.html  fn.watch.html  index.html  sidebar-items.js  struct.Args.html  struct.HintArgs.html  struct.ListArgs.html  struct.RunArgs.html  struct.VerifyArgs.html  struct.WatchArgs.html
doc/search.index/: 01ce1a6a646b.js  03f31aba8cbe.js  0d5eed14cb73.js  1f03a6671ab4.js  1f7cc6741ea6.js  23a89f0ff8eb.js  27c70b48e0b4.js  378e9b525b6b.js  3913cd0d9836.js  3eb661435e00.js  4fefa51ce579.js  509e38488e6c.js  6b54eb6dd8ef.js  (+1 more)
docs/: README.md  SUMMARY.md  rustBasicNotes.md
(+100 files in other folders)
