[package]
name = "basis"
version = "0.1.0"
edition = "2021"
description = "Rust basis."
license = "MIT"
homepage = "https://github.com/sabertazimi/awesome-rust"
repository = "https://github.com/sabertazimi/awesome-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
git2 = "0.18.3"
