[package]
name = "rustlings"
version = "4.6.0"
authors = ["anastasie <ana@ana.st>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.12"
indicatif = "0.17.8"
console = "0.15.8"
notify = "4.0.18"
toml = "0.8.19"
regex = "1.10.6"
serde = {version = "1.0.208", features = ["derive"]}

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
glob = "0.3.1"
