[package]
name = "rustlings"
version = "4.6.0"
authors = ["anastasie <ana@ana.st>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1.13"
indicatif = "0.17.11"
console = "0.15.11"
notify = "4.0.18"
toml = "0.8.22"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
glob = "0.3.2"
